add new components

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,16 @@
 #Kotlin
 kotlin.code.style=official
-kotlin.daemon.jvmargs=-Xmx3072M
+kotlin.daemon.jvmargs=-Xmx6g
 
 #Gradle
-org.gradle.jvmargs=-Xmx4096M -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx8g -Dfile.encoding=UTF-8
 org.gradle.configuration-cache=true
 org.gradle.caching=true
 
 #Android
-android.nonTransitiveRClass=true
+android.nonTransitiveR-Class=true
 android.useAndroidX=true
+
+# The Movie DB API
+THE_MOVIE_DB_BASE_URL="api.themoviedb.org"
+THE_MOVIE_DB_API_KEY="c887f2a0d7841b4d489a611609d72813"
