fix consume server

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,5 +12,5 @@ android.nonTransitiveR-Class=true
 android.useAndroidX=true
 
 # The Movie DB API
-THE_MOVIE_DB_BASE_URL="api.themoviedb.org"
+THE_MOVIE_DB_BASE_URL="https://api.themoviedb.org/3"
 THE_MOVIE_DB_API_KEY="c887f2a0d7841b4d489a611609d72813"
