--- a/server/src/main/resources/application.conf
+++ b/server/src/main/resources/application.conf
@@ -1,6 +1,7 @@
 ktor {
     deployment {
         port = 8081
+        host = "0.0.0.0"
     }
     application {
         modules = [ com.diegoferreiracaetano.dlearn.ApplicationKt.module ]
